--- a/city_base/build.gradle
+++ b/city_base/build.gradle
@@ -27,8 +27,7 @@ dependencies {
     api 'com.github.bumptech.glide:glide:3.8.0'
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-
+    api 'com.github.zhang-hai:Mp3Recorder:1.1.4'
     api project(':actionlib')
-    api project(':qdreamer')
     api project(':bluetooth')
 }
