--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Oct 17 11:20:13 CST 2020
-sdk.dir=E\:\\AndroidSDK
+#Mon Jan 15 22:50:49 CST 2024
+sdk.dir=D\:\\AndroidSDK
