--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,1 @@
-include ':bluetooth',':actionlib',':qdreamer'
-include ':city', ':city_base'
-//include ':fairystory', ':fairy_base'
+include ':bluetooth',':actionlib',':city', ':city_base'
